--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,12 @@ enum34==1.1.6
 flake8==3.2.0
 Flask==0.11.1
 Flask-Bcrypt==0.7.1
-Flask-gzip==0.1
+Flask-Compress==1.3.2
 Flask-Login==0.4.0
 Flask-MySQLdb==0.2.0
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.13.1
+gunicorn==19.6.0
 htmlmin==0.1.10
 itsdangerous==0.24
 Jinja2==2.8
